# mouc

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  cw-resources.yaml  cw.md  cw.yaml  jira_config.yaml.example  mouc_config.example.yaml  pyproject.toml  resources.yaml.example  rust-scheduler-investigation.md  selective_rollout_design.md
.github/workflows/: release.yml
docs/: config.md  critical_path_cache_optimization.md  gantt.md  jira.md  reporting.md  resources.md  scheduling.md  styling.md  workflows.md
examples/: feature_map.yaml  schedule_markdown_style.py  style_example.py
rust/: Cargo.toml  run_tests.sh
rust/src/: backward_pass.rs  config.rs  interner.rs  lib.rs  logging.rs  models.rs  sorting.rs
rust/src/critical_path/: cache.rs  calculation.rs  mod.rs  scheduler.rs  scoring.rs  state.rs  types.rs
rust/src/critical_path/rollout/: detection.rs  evaluation.rs  mod.rs  simulation.rs
rust/src/scheduler/: core.rs  mod.rs  resource_schedule.rs  rollout.rs  state.rs
src/mouc/: __init__.py  __main__.py  builtin_gantt.py  cli.py  context.py  document.py  exceptions.py  gantt.py  graph.py  jira_cli.py  jira_client.py  jira_config.py  jira_interactive.py  jira_report.py  jira_sync.py  loader.py  logger.py  markdown.py  models.py  netrc_utils.py  parser.py  report_cli.py  resources.py  rust.pyi  scheduler.py  schemas.py  styling.py  unified_config.py
src/mouc/backends/: __init__.py  base.py  docx.py  markdown.py  text_formatter.py
src/mouc/scheduler/: __init__.py  config.py  core.py  lock.py  protocols.py  resources.py  service.py  timeframes.py  validator.py
src/mouc/scheduler/algorithms/: __init__.py  bounded_rollout.py  cpsat.py  parallel_sgs.py  rust_adapter.py
src/mouc/scheduler/preprocessors/: __init__.py  backward_pass.py
src/mouc/workflows/: __init__.py  stdlib.py
tests/: __init__.py  conftest.py  test_bounded_rollout.py  test_busy_period_current_date_bug.py  test_cli.py  test_cpsat_overlapping_constraints.py  test_cpsat_scheduler.py  test_critical_path_scheduler.py  test_dependency_lag.py  test_dns_end_date_bug.py  test_dns_foresight_scheduling.py  test_dns_period_gaps.py  test_doc_command.py  test_docx.py  test_done_status.py  test_effort_parsing.py  test_entity_filtering.py  test_fixed_tasks_before_current.py  test_gantt.py  test_gantt_dns_duration_bug.py  test_gantt_dual_dates.py  test_gantt_resource_grouping.py  test_gantt_scheduling_gaps.py  test_global_dns_periods.py  test_graph.py  test_jira_cli.py  test_jira_client.py  test_jira_config.py  test_jira_sync.py  test_jira_sync_write.py  test_jira_time_tracking.py  test_manual_scheduling_dns_override.py  test_markdown.py  test_models.py  test_netrc_utils.py  test_parser.py  test_report_cli.py  test_resource_assignment.py  test_resource_exclusion_integration.py  test_resource_grouping_empty_resources.py  (+16 more)
tests/fixtures/: circular_dependency.yaml  simple_feature_map.yaml
