[project]
name = "mouc"
version = "0.4.3" # Also update in src/mouc/__init__.py when changing
description = "A lightweight dependency tracking system for mapping technical capabilities to user stories and outcomes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Randall Nortman", email = "oss@randallnortman.net"},
]
license = "MIT"
keywords = [
    "dependency-tracking",
    "project-management",
    "capability-mapping",
    "user-stories",
    "technical-dependencies",
    "outcome-mapping",
    "software-planning",
    "visualization",
    "yaml-based",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "graphviz>=0.20",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "atlassian-python-api>=3.41.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "mistune>=3.0",
]

[project.urls]
Homepage = "https://github.com/rnortman/mouc"
Repository = "https://github.com/rnortman/mouc.git"
Issues = "https://github.com/rnortman/mouc/issues"
Documentation = "https://github.com/rnortman/mouc#readme"

[project.scripts]
mouc = "mouc.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.407",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
]
ignore = ["E501"]  # line too long - handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # Allow magic numbers in test assertions

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mouc = ["py.typed"]
